feat: implement Phase 9 guided experience